--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
         "psr-4": {
             "App\\": "App/"
         }
+    },
+    "require": {
+        "dompdf/dompdf": "^1.1",
+        "tecnickcom/tcpdf": "^6.4",
+        "fpdf/fpdf": "^1.83"
     }
 }
-
