--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "dompdf/dompdf": "^1.1",
         "tecnickcom/tcpdf": "^6.4",
-        "fpdf/fpdf": "^1.83"
+        "fpdf/fpdf": "^1.83",
+        "phpmailer/phpmailer": "^6.5"
     }
 }
